# xll24

./: .gitignore  CMakeLists.txt  README.md  addin.cpp  addin.h  alert.cpp  alert.h  args.h  auto.h  debug.cpp  defines.h  dllmain.cpp  ensure.h  enum.h  error.h  evaluate.cpp  excel.h  excel_clock.h  excel_time.h  export.h  fp.h  fpx.c  fpx.h  handle.h  macrofun.h  on.h  oper.h  paste.cpp  range.cpp  ref.h  register.h  utf8.h  xlauto.cpp  xldebug.cpp  xlerror.h  xlexcel.h  xll.bat  xll.h  xll.props  xll.sln  (+5 more)
Code Snippets/Visual C++/My Code Snippets/: xllFunction.snippet
Templates/ProjectTemplates/Visual C++/: MyTemplate.vstemplate  hermite.xlsx  template.cpp  template.h  template.sln  template.vcxproj
Templates/ProjectTemplates/Visual C++/xll/: MyTemplate.vstemplate  template.cpp  template.sln  template.vcxproj  template.vcxproj.filters
Visualizers/: oper.natvis
include/: addin.h  alert.h  args.h  auto.h  defines.h  enum.h  excel.h  fp.h  fpx.h  macrofun.h  oper.h  ref.h  register.h  type.h  utf8.h  xll.h  xloper.h
py/: README.md  py.cpp  py.h  py.vcxproj  py.vcxproj.filters  xll.py
setup/: setup.vdproj
setup/Release/: setup.msi
src/: addin.cpp  debug.cpp  fpx.c  paste.cpp  py.cpp  range.cpp  xlauto.cpp
test/: handle.cpp  test.cpp  test.vcxproj  test.vcxproj.filters  type_test.cpp  web.cpp
